# bevy-breakout

./: .gitignore  Cargo.toml  README.md  bevy_breakout.d.ts  bevy_breakout.js  bevy_breakout_bg.wasm.d.ts  justfile
.github/workflows/: cd-release.yaml
assets/sounds/Of Far Different Nature - Ethnic Beat/: LICENSE.txt
assets/sounds/Of Far Different Nature - Force Field/: LICENSE.txt
assets/sounds/Of Far Different Nature - HEY/: LICENSE.txt
docs/: archtecture.md
examples/: look_at.rs  orbit_controller.rs
src/: bevy_config.rs  dev.rs  level.rs  lib.rs  main.rs  main_menu.rs  physics.rs  prelude.rs
src/components/: asset.rs  button.rs  destructible.rs  license.rs  mod.rs  scorable.rs  velocitized.rs
src/level/: ball.rs  brick.rs  camera.rs  look.rs  menu.rs  mod.rs  paddle.rs  scoreboard.rs
src/main_menu/: mod.rs  play_button.rs  quit_button.rs
src/math/: brick.rs  brick_circular.rs  mod.rs
src/orbit_controller/: mod.rs
src/plugins/: asset.rs  bevy.rs  button.rs  collidable.rs  destructible.rs  dev.rs  license.rs  look_at.rs  mod.rs  orbit_controller.rs  physics.rs  scorable.rs  text.rs
src/scenes/: mod.rs
src/scenes/credits/: mod.rs
src/scenes/level/: ball.rs  map.rs  menu.rs  mod.rs
src/scenes/main_menu/: camera.rs  mod.rs  play_button.rs  quit_button.rs  settings_button.rs
src/scenes/title/: mod.rs
src/subsystems/: mod.rs
src/subsystems/background_music/: mod.rs
wasm/: index.html
