[package]
name = "bevy-breakout"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.2"
bevy-inspector-egui = { version = "0.19.0", optional = true }
bevy_ui = "0.11.2"

[features]
dev = ["bevy/dynamic_linking", "dep:bevy-inspector-egui"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
