[package]
name = "bevy-breakout"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.3"
bevy-inspector-egui = { version = "0.19.0", optional = true }
bevy_rapier2d = "0.22.0"

[features]
dev = ["dep:bevy-inspector-egui", "bevy/dynamic_linking", "bevy_rapier2d/debug-render-2d"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
